objects/Polk_Vehicle_NTR__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Polk Vehicles (NTR)</relationshipLabel>
        <relationshipName>Polk_Vehicles_NTR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Axle_Configuration__c</fullName>
        <label>Axle Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cab__c</fullName>
        <label>Cab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Liters__c</fullName>
        <label>Engine Liters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Manufacturer__c</fullName>
        <label>Engine Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Model__c</fullName>
        <label>Engine Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <label>Engine Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Front_Axle__c</fullName>
        <label>Front Axle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel__c</fullName>
        <label>Fuel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liters_Size_Over_Under__c</fullName>
        <label>Liters Size Over Under</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_GVW_Class__c</fullName>
        <label>Manufacturer GVW Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rear_Axle__c</fullName>
        <label>Rear Axle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <label>Report Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Year__c</fullName>
        <label>Report Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VDA_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is created to identify matching Polk Vehicles and VDA Vehicles.</description>
        <label>VDA Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make_Model__c</fullName>
        <label>Vehicle Make Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Polk Vehicle (NTR)</label>
    <nameField>
        <label>VIN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polk Vehicles (NTR)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>